fix: oversized icons
Some tag icons get clipped, due to their non-standard size. This shrinks
them down a bit.

--- a/stylesheets/components/tags/styles.scss
+++ b/stylesheets/components/tags/styles.scss
@@ -47,7 +47,7 @@
 
 .topic-list, .title-wrapper {
   .tag-icon {
-    .d-icon-sync-alt, .d-icon-times-circle, .d-icon-rss-square, .d-icon-plus-square {
+    .d-icon-sync-alt, .d-icon-times-circle, .d-icon-rss-square, .d-icon-plus-square, .d-icon-exclamation-circle, .d-icon-clock {
       margin-right: 1px;
       width: 1.35em;
       font-size: 90%;
